# FinAgent

./: .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION.md  README.md  main.py  pyproject.toml  settings.py  test.py
agents/: __init__.py  financial_advisor_team.py  investment_team.py  personal_finance_team.py
core/: __init__.py  ingestion.ipynb  llm.py  loader.py
core/tmp/chroma/: chroma.sqlite3
tests/: test.ipynb
tmp/chroma/: chroma.sqlite3
tmp/chroma2/: chroma.sqlite3
