[project]
name = "finagent"
version = "0.1.0"
description = ""
authors = [
    {name = "ssahu11",email = "shipra_sahu@intuit.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "agno[anthropic,chromadb,ddgs,openai,os,pdf,yfinance] (>=2.3.21,<3.0.0)",
    "ddgs (>=9.10.0,<10.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
